# whispercppaddon

examples/addon.node/: CMakeLists.txt  package-lock.json
examples/addon.node/includes/: asyncworker.h  audioprocessor.h  napiapi.h  whisperoperator.h
examples/addon.node/js/: index.js
examples/addon.node/src/: addon2.cpp  asyncworker.cpp  audioprocessor.cpp  napiapi.cpp  whisperoperator.cpp
